[gd_scene load_steps=2 format=3 uid="uid://q3sb0n0gwdsu"]

[ext_resource type="Script" uid="uid://ca64kl6y55xos" path="res://src/scripts/ui/hud_nivel.gd" id="1_u684c"]

[node name="HudNivel" type="CanvasLayer"]
script = ExtResource("1_u684c")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_left = 8.0
offset_top = 549.0
offset_right = 45.0
offset_bottom = 591.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect3" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="TextureRect4" type="TextureRect" parent="MarginContainer/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
